# JWT-Endpoint-Checker

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
api/: JwtTestApi.sln
api/JwtTestApi/: JwtTestApi.csproj  Program.cs  appsettings.template.json
api/JwtTestApi/Common/: Email.cs
api/JwtTestApi/Endpoints/: LoginEndpoints.cs  ProfileEndpoints.cs
api/JwtTestApi/Models/: LoginRequest.cs  LoginResponse.cs
api/JwtTestApi/Models/Profile/: ProfileRequest.cs  ProfileResponse.cs  ProfileUnauthorisedResponse.cs
api/JwtTestApi/Services/: JwtTokenService.cs
api/bruno/JWT Test Endpoint/: Get Profile.bru  Login.bru  bruno.json
api/bruno/JWT Test Endpoint/environments/: Invalid.bru  Malformed.bru  Misconfigured.bru  Valid.bru
checker/: README.md  __init__.py
checker/src/: __init__.py  cli.py  main.py  parser_validator.py  runTestApi.py  test_api.py
checker/src/analyser/: aggregator.py  analyser.py  final_analysis_result.py  finding.py
checker/src/analyser/endpoint/: endpoint_analyser.py  endpoint_validation_result.py
checker/src/analyser/jwt/: token_analyser.py  token_analysis_result.py
checker/src/cli/: cli.py
checker/src/common/: severity.py
checker/src/endpoint/: endpoint_analyser.py  endpoint_validation_result.py
checker/src/helpers/: const.py  severity_calculator.py  string_helper.py  time_helper.py
checker/src/jwt/: token_analyser.py  token_analysis_result.py  token_loader.py
checker/src/report/: report_writer.py
checker/src/validators/: parser_validator.py
checker/tests/: test_aggregator.py  test_analyser.py  test_endpoint_analyser.py  test_parser_validator.py  test_severity_calculator.py  test_token_analyser.py  test_token_loader.py
